--- a/templates/index.html
+++ b/templates/index.html
@@ -95,7 +95,7 @@
                                 <!-- Card Header - Dropdown -->
                                 <div
                                     class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                                    <h6 class="m-0 font-weight-bold text-primary">Stock Price Over Time</h6>
+                                    <h6 class="m-0 font-weight-bold text-primary">TSLA Stock Price Over Time</h6>
                                 </div>
                                 <!-- Card Body -->
                                 <div class="card-body">
@@ -145,7 +145,7 @@
                                     <h6 class="m-0 font-weight-bold text-primary">How Does It Work</h6>
                                 </div>
                                 <div class="card-body">
-                                    <p>Using Natural Language Processing (NLP), we can assess the subjectivity and polarity of Elon's tweets. Then, by
+                                    <p>Using a Natural Language Processing (NLP) algorithm, we can assess the subjectivity and polarity of Elon's tweets. Then, by
                                         simply showing these tweets against the current stock price of Tesla, perhaps a pattern can begin to emerge. </p>
                                 </div>
                             </div>
