Add graphs to frontend

--- a/templates/index.html
+++ b/templates/index.html
@@ -106,6 +106,45 @@
                             </div>
                         </div>
 
+
+
+                        <!-- Area Chart -->
+                        <div class="col-xl-8 col-lg-7">
+                            <div class="card shadow mb-4">
+                                <!-- Card Header - Dropdown -->
+                                <div
+                                    class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                                    <h6 class="m-0 font-weight-bold text-primary">TSLA Twitter Polarity</h6>
+                                </div>
+                                <!-- Card Body -->
+                                <div class="card-body">
+                                    <div class="chart-area">
+                                        <canvas id="polarity"></canvas>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+
+                        <!-- Area Chart -->
+                        <div class="col-xl-8 col-lg-7">
+                            <div class="card shadow mb-4">
+                                <!-- Card Header - Dropdown -->
+                                <div
+                                    class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                                    <h6 class="m-0 font-weight-bold text-primary">TSLA Twitter Subjectivity</h6>
+                                </div>
+                                <!-- Card Body -->
+                                <div class="card-body">
+                                    <div class="chart-area">
+                                        <canvas id="subjectivity"></canvas>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
                         <!-- Project Card Example -->
                         <div class="col-xl-4 col-lg-5">
                             <div class="card shadow mb-4">
@@ -198,7 +237,12 @@
             </div>
         </div>
     </div>
-    <script>var stockData = JSON.parse({{ stockData|tojson }}); console.log(stockData);</script>
+    <script>
+        var stockData = JSON.parse({{ stockData|tojson }}); 
+        console.log(stockData); 
+        var twitterData = JSON.parse({{ twitterData|tojson }});
+        console.log(twitterData);
+    </script>
 
 
     <!-- Bootstrap core JavaScript-->
