--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
 
                     <!-- Page Heading -->
                     <div class="d-sm-flex align-items-center justify-content-between mb-4">
-                        <h1 class="h3 mb-0 text-gray-800">Elon Musk Tweets versus Tesla Stock Price: Visualized</h1>
+                        <h1 class="h3 mb-0 mt-5 text-gray-800">Elon Musk Tweets versus Tesla Stock Price: Visualized</h1>
 
                     </div>
 
@@ -62,35 +62,26 @@
                                 </div>
                             </div>
                         </div>
-
-
-
-
-                        <!-- Pending Requests Card Example -->
-                        <div class="col-xl-6 col-md-6 mb-4">
-                            <div class="card border-left-info shadow h-100 py-2">
-                                <div class="card-body">
-                                    <div class="row no-gutters align-items-center">
-                                        <div class="col mr-2">
-                                            <div class="text-xs font-weight-bold text-info text-uppercase mb-1">
-                                                Last Time Elon Tweeted</div>
-                                            <div class="h5 mb-0 font-weight-bold text-gray-800">DateTime</div>
-                                        </div>
-                                        <div class="col-auto">
-                                            <i class="fas fa-comments fa-2x text-gray-300"></i>
-                                        </div>
-                                    </div>
-                                </div>
+                        <!-- Project Card Example -->
+                        <div class="col-xl-6 col-lg-5">
+                            <div class="card shadow mb-4">
+                            <div class="card-header py-3">
+                                <h6 class="m-0 font-weight-bold text-primary">Most Recent Tweet</h6>
+                            </div>
+                            <div class="card-body">
+                                <h4 class="small font-weight-bold">{{ latest }}</h4>
+                            </div>
                             </div>
                         </div>
                     </div>
+
 
                     <!-- Content Row -->
 
                     <div class="row">
 
                         <!-- Area Chart -->
-                        <div class="col-xl-8 col-lg-7">
+                        <div class="col-xl-12 col-lg-7">
                             <div class="card shadow mb-4">
                                 <!-- Card Header - Dropdown -->
                                 <div
@@ -109,7 +100,7 @@
 
 
                         <!-- Area Chart -->
-                        <div class="col-xl-8 col-lg-7">
+                        <div class="col-xl-12 col-lg-7">
                             <div class="card shadow mb-4">
                                 <!-- Card Header - Dropdown -->
                                 <div
@@ -128,7 +119,7 @@
 
 
                         <!-- Area Chart -->
-                        <div class="col-xl-8 col-lg-7">
+                        <div class="col-xl-12 col-lg-7">
                             <div class="card shadow mb-4">
                                 <!-- Card Header - Dropdown -->
                                 <div
@@ -143,30 +134,6 @@
                                 </div>
                             </div>
                         </div>
-
-
-                        <!-- Project Card Example -->
-                        <div class="col-xl-4 col-lg-5">
-                            <div class="card shadow mb-4">
-                            <div class="card-header py-3">
-                                <h6 class="m-0 font-weight-bold text-primary">Most Recent Tweet: DateTime</h6>
-                            </div>
-                            <div class="card-body">
-                                <h4 class="small font-weight-bold">Polarity <span
-                                        class="float-right">10%</span></h4>
-                                <div class="progress mb-4">
-                                    <div class="progress-bar" role="progressbar" style="width: 10%"
-                                        aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
-                                </div>
-                                <h4 class="small font-weight-bold">Subjectivity <span
-                                        class="float-right">80%</span></h4>
-                                <div class="progress mb-4">
-                                    <div class="progress-bar bg-info" role="progressbar" style="width: 80%"
-                                        aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-                                </div>
-                            </div>
-                            </div>
-                        </div>
                     </div>
                 
 
@@ -175,7 +142,7 @@
 
                         <!-- Content Column -->
 
-                        <div class="col-lg-8 mb-">
+                        <div class="col-lg-12 mb-">
 
 
                             <!-- Approach -->
