Only add sub and pol if not 0

--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
 
                     <!-- Page Heading -->
                     <div class="d-sm-flex align-items-center justify-content-between mb-4">
-                        <h1 class="h3 mb-0 mt-5 text-gray-800">Elon Musk Tweets versus Tesla Stock Price: Visualized</h1>
+                        <h1 class="h3 mb-0 mt-5 text-gray-800">Tesla Twitter Sentiment versus Tesla Stock Price: Visualized</h1>
 
                     </div>
 
