--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
 
                     <!-- Page Heading -->
                     <div class="d-sm-flex align-items-center justify-content-between mb-4">
-                        <h1 class="h3 mb-0 mt-5 text-gray-800">Tesla Twitter Sentiment versus Tesla Stock Price: Visualized</h1>
+                        <h1 class="h3 mb-0 mt-5 text-gray-800" style="width: 800px; margin: 0 auto;">Tesla Twitter Sentiment versus Tesla Stock Price: Visualized</h1>
 
                     </div>
 
@@ -151,7 +151,7 @@
                                     <h6 class="m-0 font-weight-bold text-primary">How Does It Work</h6>
                                 </div>
                                 <div class="card-body">
-                                    <p>Using a Natural Language Processing (NLP) algorithm, we can assess the subjectivity and polarity of Elon's tweets. Then, by
+                                    <p>Using a Natural Language Processing (NLP) algorithm, we can assess the subjectivity and polarity of tweets that mention Tesla. Then, by
                                         simply showing these tweets against the current stock price of Tesla, perhaps a pattern can begin to emerge. </p>
                                 </div>
                             </div>
